Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
	  for all  environments, as it appears to be for a later python
	  version 

Sun Aug 31 22:53:12 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gnubg.c conditionals around StartPythonHandleX/StopPythonHandleX
	  for non GUI environments
	* play.c remove dead variable

Sun Aug 31 21:35:16 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (DumpPosition): add position ID and match ID to
	the "eval" output.
	(suggested by Hugh Sconyers)

Sun Aug 31 16:13:02 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkchequer.c (UpdateMoveList): didn't compile with USE_OLD_LAYOUT,
					 bring back move details

Sun Aug 31 15:13:40 2003  Joern Thyssen  <jth@gnubg.org>

	Remove arDouble from movenormal and movedouble.

	We can't remove it from DA[ ... ] since it'll break existing
	SGF files.

	* backgammon.h, gtkcube.c, gtkgame.c, text.c, html.c, play.c,
	sgf.c, analysis.c: remove arDouble from movenormal and movedouble.
	* sgf.c: do not write arDouble for rollouts.
	* export.c (ExportGameEquityEvolution): remove "dead" code.

Sat Aug 30 20:24:57 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c: fix broken stylesheet.

Sat Aug 30 20:20:39 2003  Joern Thyssen  <jth@gnubg.org>

	* formatgs.c (errorRateMP): report errors rate per decision
	in millipoints.

Sat Aug 30 20:06:47 2003  Joern Thyssen  <jth@gnubg.org>

	Unify handling of match and game statistics for html export,
	text export, and gtk.

	* Makefile.am: add formatgs.[ch]
	* formatgs.c: new file. Return formatted match statistics.
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): use formatGS.

Sat Aug 30 08:45:23 2003  Joern Thyssen  <jth@gnubg.org>

	* credits.sh, credits.c, AUTHORS: refresh and revert some
	changes.

Sat Aug 30 09:57:49 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>
